# human-data-format

./: .gitmodules  CMakeLists.txt  ast.h  ast_printer.h  buffered_input_stream.h  event_printing.cpp  event_printing.h  grammar.txt  main.cpp  notes.txt  parser.yy  parser2.cpp  parser2.h  parser_extra.cpp  parser_params.h  scalar_types.txt  scanner.cpp  scanner.h
test/: CMakeLists.txt  parse_test.cpp  parse_test.h  test_buffered_input_stream.cpp  test_main.cpp  test_parser.cpp
test/cases/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  3.txt  31.txt  32.txt  33.txt  34.txt  4.txt  41.txt  42.txt  5.txt  50.txt  51.txt  55.txt  56.txt  6.txt  7.txt  8.txt  9.txt
